# WeChatFerry-Cpp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
cmake_nnrpc/: CMakeLists.txt
cmake_sdk/: CMakeLists.txt
cmake_smc/: CMakeLists.txt
cmake_spy/: CMakeLists.txt
src/: Application.cpp  Application.h  CMakeLists.txt  ChatRobot.cpp  ChatRobot.h  Client.cpp  Client.h  DataUtil.cpp  DataUtil.h  Logger.cpp  NngSocket.cpp  NngSocket.h  config.json  main.cpp  ollama.hpp
